BugzID:1330 - Tweak snap algorithm.